# chat-analyser

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
apps/agents/: forms.py  models.py  views.py
apps/agents/data/: models.json
apps/agents/migrations/: 0001_initial.py  0002_agent_model_data.py
apps/ai/: anthropic_service.py  context_budget.py  frontend_tools.py  inference.py  memory.py  models.py  service.py  tasks.py  tests.py  tools.py  urls.py  views.py
apps/ai/management/commands/: test_memory.py
apps/ai/migrations/: 0001_initial.py  0002_enable_pgvector.py  0003_memory_thought.py  0004_tooluse.py  0005_add_model_to_message.py  0006_add_content_to_memory.py  0007_replace_memory_fields_with_data.py  0008_memory_conversation_memory_fetched_why.py  0009_message_responding_to.py  0010_conversation_agent_message_agent_config_snapshot.py  0011_rawprompt.py
apps/ai/providers/: __init__.py  anthropic.py  base.py  openai.py
apps/chat/: urls.py  views.py
apps/chat/templates/: super_base.html
apps/chat/templatetags/: markdown.py
apps/notes/: models.py  urls.py  views.py
apps/notes/migrations/: 0001_initial.py  0002_conversation_message.py
apps/relay/: apps.py  events.py  urls.py  views.py
apps/relay/static/: relay.js
apps/users/: adapter.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
chat_analyser/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
start/: web
start/celery/: worker
(+125 files in other folders)
