[project]
name = "chat-analyser"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "psycopg2-binary>=2.9",
    "gunicorn>=21.0",
    "openai>=1.0",
    "whitenoise>=6.0",
    "django-allauth>=65.0",
    "django-browser-reload>=1.0",
    "mem0ai[nlp]>=2.0.1",
    "qdrant-client>=1.12.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "anthropic>=0.97.0",
    "tiktoken>=0.7",
    "django-htmx>=1.27.0",
    "mistune>=3.2.1",
    "nh3>=0.3.5",
    "django-cotton>=2.6.2",
    "django-anymail[resend]>=15.0",
    "redis>=7.4.0",
    "celery>=5.6.3",
]
